@@ -1,5 +1,12 @@
 2008-06-21	Jannis Pohlmann <jannis@xfce.org>
 
+	* panel-plugin/xfce-volume-button.c: Remove the keyboard 
+	  grabbing feature. It causes too much problems. People without
+	  a mousewheel will have to click the plugin and use the real
+	  mixer for now.
+
+2008-06-21	Jannis Pohlmann <jannis@xfce.org>
+
 	* libxfce4mixer/xfce-mixer-track-combo.c: Increment the counter
 	  for determining the active track index only when playback
 	  and capture tracks are found.
